upgpkg: xf86-video-amd 2.7.7.7-1
git-svn-id: file:///srv/repos/svn-packages/svn@11318 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xf86-video-amd/trunk/PKGBUILD
+++ b/xf86-video-amd/trunk/PKGBUILD
@@ -1,27 +1,26 @@
 # $Id$
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 pkgname=xf86-video-amd
-pkgver=2.7.7.6
+pkgver=2.7.7.7
 pkgrel=1
 pkgdesc="X.org AMD/Geode LX & NX video driver"
 # there is no 64bit geode yet!
 arch=(i686)
+license=('custom')
 url="http://xorg.freedesktop.org/"
-makedepends=('pkgconfig' 'xorg-server>=1.4')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
 options=('!libtool')
-license=('custom:amd')
 groups=('xorg-video-drivers')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('2f3e8c3019afda926e7ab95b074c35e1')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
   ./configure --prefix=/usr \
-              --build=${CHOST} --host=${CHOST} \
-	      --enable-visibility
+	      --enable-visibility || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 
-  install -D -m644 ${startdir}/src/${pkgname}-${pkgver}/COPYING \
-                   ${startdir}/pkg/usr/share/licenses/${pkgname}/COPYING
+  install -m755 -d ${pkgdir}/usr/share/licenses/${pkgname}
+  install -m644 COPYING ${pkgdir}/usr/share/licenses/${pkgname}/ || return 1
 }
-md5sums=('e839cc4552032b7bd44beb72e575980f')
