upgpkg: xf86-video-apm 1.2.0-2
git-svn-id: file:///srv/repos/svn-packages/svn@11329 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xf86-video-apm/trunk/PKGBUILD
+++ b/xf86-video-apm/trunk/PKGBUILD
@@ -3,20 +3,20 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=xf86-video-apm
 pkgver=1.2.0
-pkgrel=1
+pkgrel=2
 pkgdesc="X.org Alliance ProMotion video driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.4.0.90')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
 groups=('xorg-video-drivers')
 options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('4f78650d79656dc803a720049d65682e')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
-md5sums=('4f78650d79656dc803a720049d65682e')
