--- a/xf86-video-chips/trunk/PKGBUILD
+++ b/xf86-video-chips/trunk/PKGBUILD
@@ -3,15 +3,17 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=xf86-video-chips
 pkgver=1.2.0
-pkgrel=1
+pkgrel=2
 pkgdesc="X.org Chips and Technologies video driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=(glibc)
-makedepends=('pkgconfig' 'xorg-server>=1.4.0.90')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+conflicts=('xorg-server<1.4.99.906')
 groups=('xorg-video-drivers')
 options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('0fec6bee65383790485d917247a61629')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
@@ -19,4 +21,3 @@ build() {
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
-md5sums=('0fec6bee65383790485d917247a61629')
