--- a/xf86-video-ark/trunk/PKGBUILD
+++ b/xf86-video-ark/trunk/PKGBUILD
@@ -9,6 +9,7 @@ arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
 makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+conflicts=('xorg-server<1.4.99.906')
 options=('!libtool')
 groups=('xorg-video-drivers')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
