upgpkg: xf86-video-amd 2.7.7.7-1
git-svn-id: file:///srv/repos/svn-packages/svn@11395 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xf86-video-amd/trunk/PKGBUILD
+++ b/xf86-video-amd/trunk/PKGBUILD
@@ -8,7 +8,9 @@ pkgdesc="X.org AMD/Geode LX & NX video driver"
 arch=(i686)
 license=('custom')
 url="http://xorg.freedesktop.org/"
+depends=('glibc')
 makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+conflicts=('xorg-server<1.4.99.906')
 options=('!libtool')
 groups=('xorg-video-drivers')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
