--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,50 +2,48 @@
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=xf86-video-ati
-pkgver=6.8.0
-pkgrel=4
-_mesaver="7.0.3"
+pkgver=6.9.0
+pkgrel=1
+_mesaver="7.1"
 pkgdesc="X.org ati video driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
-depends=('libdrm>=2.3.0')
-makedepends=('pkgconfig' 'xorg-server>=1.4' 'imake' 'mesa>=7.0.3'
+depends=('libdrm>=2.3.1' 'libgl>=7.1-2')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906' 'imake' 'mesa>=7.1'
 	     'glproto>=1.4.9' 'xf86driproto' 'diffutils')
 groups=('xorg-video-drivers')
 options=('!libtool')
-license=('custom')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2
-       http://downloads.sourceforge.net/sourceforge/mesa3d/MesaLib-${_mesaver}.tar.bz2)
+       http://downloads.sourceforge.net/sourceforge/mesa3d/MesaLib-${_mesaver}.tar.bz2
+       mesa-7.1-link-shared.patch)
+md5sums=('afa4873f58ae6fa31fedeb9ed31531db'
+         '6bff7f532d16f90f944a400c8bd7074d'
+         'f0baa948d9810f268413111ee439d24b')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
   ./configure --prefix=/usr \
-              --enable-dri
+              --enable-dri || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 
-  cd ${startdir}/src/Mesa-${_mesaver}/configs
-
-  CONFIG="linux-dri-x86"
-  [ "$CARCH" = "x86_64" ] && CONFIG="linux-dri-x86-64"
-  echo "EXTRA_LIB_PATH =" >> ${CONFIG}
-  # currently commented, see FS#7590 for details
-  #echo "OPT_FLAGS = ${CFLAGS} -fno-strict-aliasing" >> ${CONFIG}
-  echo "SRC_DIRS = glx/x11 mesa" >> ${CONFIG}
-  echo "USING_EGL = 0" >> ${CONFIG}
-  echo "PROGRAM_DIRS =" >> ${CONFIG}
-  echo "MKDEP = makedepend" >> ${CONFIG}
-  echo "DRI_DIRS = r128 radeon r200 r300" >> ${CONFIG}
-  echo "DRI_DRIVER_SEARCH_DIR = /usr/lib/xorg/modules/dri" >> ${CONFIG}
-  echo "DRI_DRIVER_INSTALL_DIR = /usr/lib/xorg/modules/dri" >> ${CONFIG}
-  echo "ARCH_FLAGS += -DGLX_USE_TLS" >> ${CONFIG}
-  echo "X11_INCLUDES = `pkg-config --cflags-only-I x11`" >> ${CONFIG}
-
-  ln -s ${CONFIG} current
-  cd ${startdir}/src/Mesa-${_mesaver}/src/mesa
-  make linux-solo || return 1
-  cd drivers/dri
-  make DESTDIR=${startdir}/pkg install || return 1
+  cd ${srcdir}/Mesa-${_mesaver}
+  patch -Np1 -i ${srcdir}/mesa-7.1-link-shared.patch || return 1
+  export CFLAGS="${CFLAGS} -ffast-math"
+  ./configure --prefix=/usr \
+    --with-dri-driverdir=/usr/lib/xorg/modules/dri \
+    --with-dri-drivers=radeon,r200,r300 \
+    --enable-glx-tls \
+    --disable-ttm-api \
+    --with-driver=dri \
+    --enable-xcb \
+    --disable-glu \
+    --disable-glut \
+    --disable-glw || return 1
+  make || return 1
+  cd src/mesa/drivers/dri || return 1
+  make DESTDIR=${pkgdir} install || return 1
+  rm -f ${pkgdir}/usr/lib/xorg/modules/dri/libdricore.so
+  rm -rf ${pkgdir}/usr/include
+  rm -rf ${pkgdir}/usr/lib/pkgconfig
 }
-md5sums=('3c97c7925ebf4162eeb3463e23adc0e3'
-         'e6e6379d7793af40a6bc3ce1bace572e')
