upgpkg: xf86-video-ati 6.9.0-1     Add conflicts
git-svn-id: file:///srv/repos/svn-packages/svn@11417 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -11,6 +11,7 @@ url="http://xorg.freedesktop.org/"
 depends=('libdrm>=2.3.1' 'libgl>=7.1-2')
 makedepends=('pkgconfig' 'xorg-server>=1.4.99.906' 'imake' 'mesa>=7.1'
 	     'glproto>=1.4.9' 'xf86driproto' 'diffutils')
+conflicts=('xorg-server<1.4.99.906')
 groups=('xorg-video-drivers')
 options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2
