--- a/xf86-video-ati/trunk/PKGBUILD
+++ b/xf86-video-ati/trunk/PKGBUILD
@@ -11,6 +11,7 @@ url="http://xorg.freedesktop.org/"
 depends=('libdrm>=2.3.1' 'libgl>=7.1-2')
 makedepends=('pkgconfig' 'xorg-server>=1.4.99.906' 'imake' 'mesa>=7.1'
 	     'glproto>=1.4.9' 'xf86driproto' 'diffutils')
+conflicts=('xorg-server<1.4.99.906')
 groups=('xorg-video-drivers')
 options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2
