--- a/xf86-video-cirrus/trunk/PKGBUILD
+++ b/xf86-video-cirrus/trunk/PKGBUILD
@@ -3,12 +3,13 @@
 
 pkgname=xf86-video-cirrus
 pkgver=1.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="X.org Cirrus Logic video driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.4.2')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+conflicts=('xorg-server<1.4.99.906')
 groups=('xorg-video-drivers')
 options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
