--- a/xf86-video-glint/trunk/PKGBUILD
+++ b/xf86-video-glint/trunk/PKGBUILD
@@ -2,22 +2,22 @@
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=xf86-video-glint
-pkgver=1.1.1
+pkgver=1.2.1
 pkgrel=5
 pkgdesc="X.org GLINT/Permedia video driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.3.99.2' 'xf86driproto' 'mesa')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906' 'xf86driproto' 'mesa')
+conflicts=('xorg-server<1.4.99.906')
 options=('!libtool')
 groups=('xorg-video-drivers')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('6d7afdac0a26cf201c3f3b417c31c5e1')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr \
-              --build=${CHOST} --host=${CHOST}
+  ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
-md5sums=('2cf49f701024a145bd25aff9da11d479')
