upgpkg: xf86-video-intel 2.4.2-1     Replace i810 driver, it does not build anymore
git-svn-id: file:///srv/repos/svn-packages/svn@11435 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,12 +4,13 @@
 pkgname=xf86-video-intel
 pkgver=2.4.2
 pkgrel=1
-pkgdesc="X.org Intel i810/i830/i915 video drivers"
+pkgdesc="X.org Intel i810/i830/i915/945G/G965+ video drivers"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('intel-dri>=7.1-2' 'libpciaccess>=0.10.3' 'libdrm>=2.3.1')
 makedepends=('pkgconfig' 'xorg-server>=1.4.99.906-2' 'xf86driproto>=2.0.4' 'glproto>=1.4.9' 'mesa>=7.1')
-conflicts=('xorg-server<1.4.99.906')
+conflicts=('xorg-server<1.4.99.906' 'xf86-video-i810')
+replaces=('xf86-video-i810')
 options=('!libtool')
 groups=('xorg-video-drivers')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
@@ -21,6 +22,4 @@ build() {
               --enable-dri || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
-  rm -f ${startdir}/pkg/usr/lib/xorg/modules/drivers/i810_drv.so
-  rm -f ${startdir}/pkg/usr/share/man/man4/i810.4*
 }
