upgpkg: xf86-video-sisusb 0.9.0-1
git-svn-id: file:///srv/repos/svn-packages/svn@11481 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,22 +2,22 @@
 #Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=xf86-video-sisusb
-pkgver=0.8.1
-pkgrel=4
+pkgver=0.9.0
+pkgrel=1
 pkgdesc="X.org SiS USB video driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.1.1')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+conflicts=('xorg-server<1.4.99.906')
 groups=('xorg-video-drivers')
-options=('nolibtool')
+options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('cbd669507e4aa35e468905f09b546333')
+md5sums=('7b1f5465f423a859f306f4f1d6306a1b')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr \
-              --build=${CHOST} --host=${CHOST}
+  ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
