upgpkg: xf86-video-vga 4.1.0-5
git-svn-id: file:///srv/repos/svn-packages/svn@11499 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/xf86-video-vga/trunk/PKGBUILD
+++ b/xf86-video-vga/trunk/PKGBUILD
@@ -3,21 +3,21 @@
 
 pkgname=xf86-video-vga
 pkgver=4.1.0
-pkgrel=4
+pkgrel=5
 pkgdesc="X.org VGA 16 color video driver"
 arch=(i686 x86_64)
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.1.1')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+conflicts=('xorg-server<1.4.99.906')
 groups=('xorg-video-drivers')
-options=('nolibtool')
+options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2)
 md5sums=('b93e5fe9757db779a75cd3ce97b9613d')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  ./configure --prefix=/usr \
-              --build=${CHOST} --host=${CHOST}
+  ./configure --prefix=/usr || return 1
   make || return 1
   make DESTDIR=${startdir}/pkg install || return 1
 }
