--- a/xf86-video-vesa/trunk/PKGBUILD
+++ b/xf86-video-vesa/trunk/PKGBUILD
@@ -2,19 +2,20 @@
 # Maintainer: Alexander Baldeck <alexander@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 pkgname=xf86-video-vesa
-pkgver=1.3.0
-pkgrel=6
+pkgver=2.0.0
+pkgrel=2
 pkgdesc="X.org vesa video driver"
 arch=(i686 x86_64)
 license=('custom')
 url="http://xorg.freedesktop.org/"
 depends=('glibc')
-makedepends=('pkgconfig' 'xorg-server>=1.4.2')
+makedepends=('pkgconfig' 'xorg-server>=1.4.99.906')
+conflicts=('xorg-server<1.4.99.906')
 groups=('xorg' 'xorg-video-drivers')
-options=('!libtool' 'force')
+options=('!libtool')
 source=(${url}/releases/individual/driver/${pkgname}-${pkgver}.tar.bz2
 	COPYING)
-md5sums=('4a307852f3b4850e436a41dab2a73676'
+md5sums=('433cf6f961eb4a2ab6fcb086def0b2b4'
          'e5418e7a75e21268637984e70265e146')
 
 build() {
