--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -7,7 +7,7 @@ pkgrel=1
 pkgdesc="The GNOME Session Handler"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
-depends=('libgnomeui>=2.22.90' 'policykit-gnome>=0.9.2' 'gnome-settings-daemon>=2.23.90' 'at-spi>=1.23.6' 'startup-notification>=0.9')
+depends=('libgnomeui>=2.22.90' 'policykit-gnome>=0.9.2' 'gnome-settings-daemon>=2.23.90' 'at-spi>=1.23.6' 'startup-notification>=0.9' 'consolekit>=0.3.0')
 makedepends=('perlxml' 'pkgconfig')
 options=(!emptydirs)
 install=gnome-session.install
