--- a/repos/gnome-i686/PKGBUILD
+++ b/repos/gnome-i686/PKGBUILD
@@ -2,19 +2,19 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=mousetweaks
-pkgver=2.22.3
+pkgver=2.23.90
 pkgrel=1
 pkgdesc="Mouse accessibility enhancements for the GNOME desktop"
 arch=(i686 x86_64)
 license=('GPL3' 'FDL')
-depends=('gnome-panel')
+depends=('gnome-panel>=2.23.90.1' 'at-spi>=1.23.6')
 makedepends=('perlxml' 'pkgconfig' 'gnome-doc-utils>=0.12.2')
-groups=('gnome-extra>=2.22.2' 'at-spi>=1.22.1')
+groups=('gnome-extra')
 options=('!libtool' '!emptydirs')
 url="http://www.gnome.org"
 install=mousetweaks.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('bf36afbea857e49d32e5aefc29f94440')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('bad3340e7d8b7cd34b599ee41a74e6c0')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
