--- a/gnome-utils/repos/gnome-i686/PKGBUILD
+++ b/gnome-utils/repos/gnome-i686/PKGBUILD
@@ -2,24 +2,22 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-utils
-pkgver=2.20.0.1
-pkgrel=3
+pkgver=2.23.90
+pkgrel=1
 pkgdesc="Common utilities for GNOME"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('libgtop>=2.22.0' 'libgnomeprintui>=2.18.2' 'gnome-panel>=2.22.0')
+depends=('libgtop>=2.23.90' 'gnome-panel>=2.23.90.1')
 makedepends=('perlxml' 'gnome-doc-utils>=0.12.2' 'pkgconfig')
 options=('!libtool' '!emptydirs')
 url="http://www.gnome.org"
 groups=('gnome-extra')
 install=gnome-utils.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.20/${pkgname}-${pkgver}.tar.bz2
-	bgo497489.patch)
-md5sums=('2d4385df2fb566b437b283bd2ce70190' '22922b4c54438b8808d5b942459da1db')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.23/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('822db91884c507b8917b78026b9a8bec')
 
 build() {
   cd ${startdir}/src/${pkgname}-${pkgver}
-  patch -Np1 -i ${startdir}/src/bgo497489.patch || return 1
   ./configure --prefix=/usr --sysconfdir=/etc \
               --libexecdir=/usr/lib/gnome-utils \
               --localstatedir=/var --disable-static \
