upgpkg: kernel-headers 2.6.26.3-1
git-svn-id: file:///srv/repos/svn-packages/svn@11551 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kernel-headers/trunk/PKGBUILD
+++ b/kernel-headers/trunk/PKGBUILD
@@ -1,5 +1,6 @@
 # $Id$
 # Maintainer: Jan de Groot <jgc@archlinux.org>
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
 pkgname=kernel-headers
 pkgver=2.6.26.3
 _basever=2.6.26
