upgpkg: kdenetwork 4.1.1-2     adding rdesktop as dependency which is used by krdc (see FS#11366
git-svn-id: file:///srv/repos/svn-packages/svn@11573 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kdenetwork/trunk/PKGBUILD
+++ b/kdenetwork/trunk/PKGBUILD
@@ -3,13 +3,13 @@
 
 pkgname=kdenetwork
 pkgver=4.1.1
-pkgrel=1
+pkgrel=2
 pkgdesc="KDE Network related programs"
 arch=('i686' 'x86_64')
 url='http://www.kde.org'
 license=('GPL' 'LGPL' 'FDL')
 groups=('kde')
-depends=('kdebase-workspace' 'kdepimlibs' 'libvncserver' 'openslp' 'libidn' 'libotr' 'decibel' 'qca')
+depends=('kdebase-workspace' 'kdepimlibs' 'libvncserver' 'openslp' 'libidn' 'libotr' 'decibel' 'qca' 'rdesktop')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
 source=("http://download.kde.org/stable/${pkgver}/src/${pkgname}-${pkgver}.tar.bz2")
