upgpkg: kde-l10n-sr 4.1.1-1
git-svn-id: file:///srv/repos/svn-packages/svn@11649 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/kde-l10n-sr/trunk/PKGBUILD
+++ b/kde-l10n-sr/trunk/PKGBUILD
@@ -1,8 +1,8 @@
-# $ Id: $
+# $Id: $
 # Maintainer: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=kde-l10n-sr
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc="Serbian Localization for KDE"
 arch=('i686' 'x86_64')
@@ -12,8 +12,8 @@ replaces=('kde-i18n-sr')
 provides=('kde-i18n-sr')
 makedepends=('pkgconfig' 'cmake' 'automoc4')
 options=('docs')
-source=("ftp://ftp.archlinux.org/other/kde/l10n/${pkgname}-${pkgver}.tar.bz2")
-md5sums=('0e5793440087ee1b70d034be05421d2b')
+source=("http://download.kde.org/stable/${pkgver}/src/kde-l10n/${pkgname}-${pkgver}.tar.bz2")
+md5sums=('b29bc82068ac7d3443fffe924356a7fd')
 
 build() {
 	cd $srcdir
