--- a/audacious/trunk/PKGBUILD
+++ b/audacious/trunk/PKGBUILD
@@ -1,42 +1,31 @@
 # $Id$
-# Maintainer: Travis Willard <travisw@wmpub.ca>
+# Maintainer: Alexander Fehr <pizzapunk gmail com>
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=audacious
-pkgver=1.5.0
-pkgrel=2
-pkgdesc="A media player forked from BMP 0.9.7.1 - player component (no plugins)."
+pkgver=1.5.1
+pkgrel=1
+pkgdesc="Media player based on BMP"
 arch=('i686' 'x86_64')
 url="http://audacious-media-player.org/"
 license=('GPL3')
-depends=('gtk2' 'libmowgli' 'libmcs' 'dbus-glib' 'libglade' 'unzip' 'libsamplerate') # Unzip for theme changing
-replaces=('audacious-player')
+depends=('gtk2' 'libmcs' 'dbus-glib' 'libsamplerate' 'libxml2' 'desktop-file-utils')
+optdepends=('unzip: Zipped skins support')
 provides=('audacious-player')
-conflicts=('audacious-player')
+replaces=('audacious-player')
 install=audacious.install
-source=(http://distfiles.atheme.org/$pkgname-$pkgver.tgz)
-md5sums=('ea631b69eb54e97d60bf3c52ae6c7e62')
-options=('!libtool')
+source=(http://distfiles.atheme.org/audacious-$pkgver.tbz2)
+md5sums=('ea7a8ee2e8f1a301b40ccf40788ab0eb')
 
 build() {
+  cd "$srcdir/audacious-$pkgver"
 
-    # NOTE TO ANYONE BUILDING THIS PKG!
-    # 
-    # Audacious and Audacious-plugins must both be built with
-    # the same CFLAGS and CXXFLAGS.  
-    # If ever strange, unexplainable playlist corruption happens, this
-    # is likely the cause - make sure both packages were built with
-    # the same flags and same version of GCC.
+  if [[ $CARCH == "i686" ]]; then
+    ./configure --prefix=/usr --enable-samplerate --disable-sse2 || return 1
+  elif [[ $CARCH == "x86_64" ]]; then
+    ./configure --prefix=/usr --enable-samplerate || return 1
+  fi
 
-    cd $startdir/src/audacious-$pkgver
-
-    ./configure --prefix=/usr \
-                --enable-chardet --enable-samplerate \
-                --disable-sse2
-
-    make || return 1
-
-    make DESTDIR=$startdir/pkg install
-
-} 
-
+  make || return 1
+  make DESTDIR="$pkgdir" install || return 1
+}
