--- a/liborigin/trunk/PKGBUILD
+++ b/liborigin/trunk/PKGBUILD
@@ -11,7 +11,7 @@ arch=("i686" 'x86_64')
 depends=('gcc-libs')
 license=("GPL")
 source=("http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz")
-
+md5sums=('5b7c6f22173a9d97c4f0dbec8671ac83')
 
 build() {
 	cd $srcdir/${pkgname}-${pkgver}
