--- a/midori/trunk/PKGBUILD
+++ b/midori/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Johannes Krampf <wuischke.at.amule.dot.org>
 
 pkgname=midori
-pkgver=0.0.20
+pkgver=0.0.21
 pkgrel=1
 pkgdesc="A lightweight web browser based on Gtk WebKit"
 arch=('i686' 'x86_64')
@@ -12,10 +12,10 @@ url="http://www.twotoasts.de/index.php?/pages/midori_summary.html"
 license=('GPL')
 install=midori.install
 depends=('gtksourceview2' 'libwebkit' 'hicolor-icon-theme')
-optdepends=('gvfs: support for source viewing')
+#optdepends=('gvfs: support for source viewing')
 makedepends=('pkgconfig' 'libxml2' 'intltool')
 source=(http://goodies.xfce.org/releases/$pkgname/$pkgname-$pkgver.tar.bz2)
-md5sums=('d27799c093b13e124eb7c0f479ea26c0')
+md5sums=('0b9298d00c598137431beb51dbe1f302')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
